# Fashion-Agent-Autonomous

./: .gitignore  CLEANUP_SUMMARY.md  HITL_GUIDE.md  LANGGRAPH_TIME_TRAVEL.md  UI_SETUP_GUIDE.md  __init__.py  app.js  config.py  graph.py  html_ui.html  langgraph openapi 3 specs.json  langgraph.json  pyproject.toml  state.py  styles.css
agents/: __init__.py  builders.py
assets/jsons/: outfit_designer_output.json  trend_processor_output.json  video_analyzer_output.json
data/: checkpoints.db-shm  checkpoints.db-wal  content_analyzer_output.json  dashboard_data.json  data_collector_output.json  old.1trend_processor_output.json  old.outfit_designer_output.json  old.trend_processor_output.json  old1.outfit_designer_output.json  outfit_designer_output.json  trend_processor_output.json  video_analyzer_output.json  video_generation_collection_output.json
nodes/: __init__.py  content_analyzer.py  data_collector.py  final_processor.py  outfit_designer.py  outfit_reviewer.py  user_input_collector.py  video_analyzer.py  video_generator.py
tools/: __init__.py  helpers.py  mcp_clients.py
ui/: .env.example  API_REFERENCE.md  FIX_SKIP_BUTTON.md  README.md  SETUP_INSTRUCTIONS.md  index.html  package.json  vite.config.js
ui/src/: App.css  App.jsx  index.css
ui/src/components/: DynamicForm.jsx  FashionAgentUI.css  FashionAgentUI.jsx  InputRequiredModal.css  InputRequiredModal.jsx  MessageList.css  MessageList.jsx  OutfitCard.jsx  OutfitReviewForm.css  OutfitReviewForm.jsx  PipelineProgress.jsx  RunHistoryPanel.jsx  (+4 more)
utils/: __init__.py  storage.py  video_generation.py
(+4 files in other folders)
