[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fashion-agent"
version = "0.1.0"
description = "Multi-Agent Fashion Trend Analysis System"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "chardet>=5.2.0",
    "charset-normalizer>=3.4.3",
    "colorama>=0.4.6",
    "google-genai>=1.49.0",
    "langchain==1.0.5",
    "langchain-google-genai>=3.0.1",
    "langchain-mcp-adapters>=0.1.12",
    "langgraph==1.0.3",
    "langgraph-api>=0.5.8",
    "langgraph-cli[inmem]>=0.4.7",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "moviepy>=2.2.1",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.2",
    "plotly>=6.4.0",
    "psycopg2>=2.9.11",
    "python-decouple>=3.8",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.51.0",
    "supabase>=2.24.0",
    "fastapi>=0.121.3",
    "uvicorn>=0.38.0",
    "jinja2>=3.1.6",
    "sse-starlette>=2.1.3",
]

[tool.setuptools]
packages = ["fashion_agent"]
package-dir = {"fashion_agent" = "."}

[tool.setuptools.package-data]
fashion_agent = ["**/*.py"]



